<?xml version="1.0"?>

<package format="2">
  <name>biped_msgs</name>
  <version>0.0.0</version>
  <description>
    Biped message type definition
  </description>
  <maintainer email="kuribayashi@stu.kobe-u.ac.jp">Hiroki Kuribayashi</maintainer>
  <license>MIT</license>
  <author email="kuribayashi@stu.kobe-u.ac.jp">Hiroki Kuribayashi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>