<?xml version="1.0"?>

<package format="2">
  <name>capt_planner</name>
  <version>0.0.0</version>
  <description>
    Capturability based Controller for Valkyrie
  </description>
  <maintainer email="kuribayashi@stu.kobe-u.ac.jp">Hiroki Kuribayashi</maintainer>
  <license>MIT</license>
  <author email="kuribayashi@stu.kobe-u.ac.jp">Hiroki Kuribayashi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>choreonoid_rvizplugin</depend>
  <depend>footstep_planner</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>