<?xml version="1.0"?>

<package format="2">
  <name>choreonoid_biped</name>
  <version>0.0.0</version>
  <description>
    BipedCnoid ROS interface package with Choreonoid
  </description>
  <maintainer email="kuribayashi@stu.kobe-u.ac.jp">Hiroki Kuribayashi</maintainer>
  <license>MIT</license>
  <author email="kuribayashi@stu.kobe-u.ac.jp">Hiroki Kuribayashi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>choreonoid_ros_plugin</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>biped_msgs</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>